[gd_scene load_steps=2 format=3 uid="uid://c8m9k5n2wp4qb"]

[ext_resource type="Script" path="res://scripts/dialogue_system.gd" id="1_dialogue"]

[node name="DialogueSystem" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dialogue")

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -250.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="SpeakerName" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Speaker Name"

[node name="DialogueText" type="Label" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
text = "Dialogue text will appear here."
autowrap_mode = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ContinueButton" type="Button" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
text = "Continue â†’"
